# snapquery

./: .gitignore  .project  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  snapquery.puml  snapquery.yaml
.github/workflows/: build.yml
docs/: index.md
samples/: scholia.json  wikikdata-examples.json
scripts/: blackisort  fixdomain  get_ceur_ws_challenge  install  qlv  restore_db  test  test_queries
search/: search_index.json
snapquery/: authorization.py  basequeryview.py  ceurws.py  dblp.py  endpoint.py  error_filter.py  execution.py  github_access.py  graph.py  mwlogin.py  namespace_stats_view.py  orcid.py  params.py  params_view.py  person_selector.py  pid.py  pid_lookup.py  prefix_merger.py  qimport.py  qimport_view.py  qlever.py  query_annotate.py  query_parameterizer.py  query_selector.py  query_set_cmd.py  query_set_tool.py  query_set_tool_view.py  scholar_selector.py  scholia.py  sib_sparql_examples.py  snapquery_cmd.py  snapquery_core.py  snapquery_view.py  snapquery_webserver.py  sparql_analyzer.py  stats_view.py  urlimport.py  version.py  wd_examples.py  wd_page_query_extractor.py  (+1 more)
snapquery/models/: person.py  scholar.py  sparql_components.py
snapquery/resources/: sparql_language.json
snapquery/samples/: WikiProject_LSEThesisProject.wiki  ceur-ws.json  dblp.json  endpoints.yaml  endpoints_optional.yaml  federated-query-examples.json  graphs.yaml  meta_query.yaml  orkg.json  qlever.json  qlever_performance.json  query_stats.yaml  scholia.json  snapquery.json  wikidata-WikidataThesisToolkit.json  wikidata-WikidataThesisToolkitAlt.json  wikidata-examples.json  wikidata-lsethesis.json  wikidata-short-urls.json
snapquery/samples/query-sets/yaml/: ceur-ws.yaml  dblp.yaml  federated-query-examples.yaml  hartig-eqs-2025-12-16.yaml  orkg.yaml  qlever-issues-2025-12-05.yaml  qlever.yaml  qlever_performance.yaml  scholia-2025-12-04.yaml  scholia-2025-12-16.yaml  scholia-qlever-2025-12-16.yaml  scholia.yaml  sib-2025-12-04.yaml  snapquery.yaml  wikidata-WikidataThesisToolkit.yaml  wikidata-WikidataThesisToolkitAlt.yaml  wikidata-examples-2025-12-04.yaml  wikidata-examples.yaml  wikidata-short-urls-2025-12-06.yaml  wikidata-short-urls.yaml
snapquery/services/: dblp.py  wikidata.py
tests/: test_authorization.py  test_ceurws.py  test_cmdline.py  test_endpoints.py  test_error_filter.py  test_graph.py  test_import.py  test_named_query.py  test_namedqueries.py  test_oauth.py  test_orcid.py  test_params.py  test_pids.py  test_prefix_merger.py  test_qlever.py  test_query_annotate.py  test_query_execution.py  test_query_name.py  test_query_set_tool.py  test_restful_api.py  test_scholia.py  test_scholia_q.py  test_sib_examples.py  test_snapquery_core.py  test_sparql_analyzer.py  test_sparql_components.py  test_wd_query_parsing.py  test_wd_short_url.py
tests/query_extractors/: sparql_standard_queries.py
tests/resources/error_messages/qlever/: ask_unsupported.txt  invalid_literal.txt  invalid_regex_func.txt  memory_limit.txt
tests/resources/error_messages/triplydb/: parser_error.txt
tests/resources/error_messages/wdqs/: duplicate_prefix.txt  invalid_iri_declaration.txt  invalid_sparql_syntax.txt  timeout.txt  undefined_prefix.txt
