# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapquery"
description = "Just Query wikidata and other SPARQL endpoints by query name - a frontend to Introduce Named Queries and Named Query Middleware to wikidata and other SPARQL endpoints "
keywords = [ "nicegui", "wikidata","SPARQL","query","middleware","qlever","blazegraph"]
home-page = "https://github.com/WolfgangFahl/snapquery"
authors = [
  {name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com" },
]
readme = "README.md"
license = {text = "Apache-2.0"}


dependencies = [
	# https://pypi.org/project/pybasemkit/
	# https://github.com/WolfgangFahl/pybasemkit
	# Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
	"pybasemkit>=0.1.3",
	# https://github.com/WolfgangFahl/nicegui_widgets
	"ngwidgets>=0.30.0",
    # https://pypi.org/project/pyLodStorage/
    "pyLodStorage>=0.18.2",
    # https://pypi.org/project/py-3rdparty-mediawiki/
    "py-3rdparty-mediawiki>=0.18.1",
    "wikitextparser",
    "requests",
    # https://pypi.org/project/python-slugify/
	"python-slugify>=8.0.4",
	# https://pypi.org/project/ratelimit/
	"ratelimit>=2.2.1",
    # https://pypi.org/project/mwoauth/
    "mwoauth>=0.4.0",
    #"mwoauth@git+https://github.com/mediawiki-utilities/python-mwoauth"
    #https://pypi.org/project/tqdm/
    "tqdm>=4.66.4",
    #https://pypi.org/project/pandas/
    "pandas>=2.3.3",
    # https://pypi.org/project/nicegui/
    # force pin of nicegui
    "nicegui[plotly]==2.24.2",
    # py_ez_wikidata
    # https://github.com/WolfgangFahl/py_ez_wikidata
    "py_ez_wikidata>=0.3.2",
    # https://pypi.org/project/nameparser/
    "nameparser>=1.1.3",
    # https://github.com/WolfgangFahl/pyOpenSourceProjects
    "pyOpenSourceProjects>=0.3.0"
]

requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "snapquery/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Home = "https://github.com/WolfgangFahl/snapquery"
Documentation = "https://wiki.bitplan.com/index.php/snapquery"
Source = "https://github.com/WolfgangFahl/snapquery"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["snapquery"]

[tool.hatch.build.targets.wheel.sources]
"snapquery" = "snapquery"

[project.scripts]
snapquery = "snapquery.snapquery_cmd:main"

[tool.black]
line-length = 120
